--- a/templates/exercise_analysis.html
+++ b/templates/exercise_analysis.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="#">Home</a>
+      <a href="#footer-contact">Contact</a>
       <a href="#">Exercises</a>
-      <a href="#">Contact</a>
+      <a href="#">Home</a>
     </div>
 
     <div class="banner" style="position: relative; text-align: center">
@@ -46,7 +46,7 @@
           text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         "
       >
-        <h1>FitSense<b>AI</b></h1>
+        <h1>FitSense - <i>AI</i></h1>
         <p>Empowering Your Fitness Journey</p>
       </div>
     </div>
@@ -90,6 +90,6 @@
       </section>
     </div>
 
-    <div class="footer">&copy; 2023 FitSense.</div>
+    <div class="footer" id="footer-contact">&copy; 2023 FitSense.</div>
   </body>
 </html>
