--- a/templates/exercise_pose.html
+++ b/templates/exercise_pose.html
@@ -12,11 +12,10 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="#">Home</a>
+      <a href="#footer-contact">Contact</a>
       <a href="#">Exercises</a>
-      <a href="#">Contact</a>
+      <a href="#">Home</a>
     </div>
-
     <div class="pose-container">
       <h2>Exercise Pose</h2>
       <p>Exercise: {{ exercise_name }}</p>
