--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,8 @@
       body {
         font-family: "Poppins", sans-serif;
         overflow: hidden;
+        background-color: #263238;
+        color: #fff;
       }
 
       .wave {
@@ -68,7 +70,6 @@
 
       .login-content h2 {
         margin: 15px 0;
-        color: #333;
         text-transform: uppercase;
         font-size: 2.9rem;
       }
@@ -246,7 +247,6 @@
   </head>
 
   <body>
-    <!-- <img class="wave" src="img/wave.png"> -->
     <div class="container">
       <div class="img">
         <img src="static/img/undraw_indoor_bike_pwa4.svg" />
@@ -254,7 +254,7 @@
       <div class="login-content">
         <form action="/login" method="POST">
           <img src="static/img/undraw_male_avatar_g98d.svg" />
-          <h2 class="title">Welcome</h2>
+          <h2 class="title">FitSense-<i>AI</i></h2>
           <div class="input-div one">
             <div class="i">
               <i class="fas fa-user"></i>
