--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
   font-family: Arial, sans-serif;
-  background: #161d25;
+  background: #263238;
   color: #fff;
   margin: 0;
   padding: 0;
@@ -9,7 +9,7 @@ body {
 }
 
 .navbar {
-  background-color: transparent;
+  background-color: #263238;
   position: fixed;
   top: 0;
   right: 0;
@@ -19,7 +19,7 @@ body {
 
 .navbar a {
   float: right;
-  font-size: 16px;
+  font-size: 26px;
   color: white;
   text-align: center;
   padding: 14px 16px;
@@ -42,7 +42,7 @@ body {
   font-size: 25px;
 }
 
-b {
+i {
   color: grey;
 }
 /* Footer styles */
